--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="logo">   
     <img src="pictures/Seat Logo.png" alt="">
     <h1>Savory Bites</h1>
-    <h2>Quality every deliver.</h2>
+    <h2>Where Every Bite Tells a Delicious Story</h2>
     </div> 
-
+    
    
 <form>
     <div>
@@ -68,15 +68,13 @@
         <textarea id="comments" name="comments" rows="4" cols="50"></textarea>
     </div>
 
-    <div>
-        <label for="orderPlaced">Order Placed:</label>
-        <input type="checkbox" id="orderPlaced" name="orderPlaced">
-    </div>
+  
 
     <button type="submit">Place Order</button>
     <button type="cancel" onclick="cancelOrder()">Cancel</button>
     
 </form>
+
 
     <script src="index.js"></script>
 </body>
